Refactored alert component to module and integrate it to signup, login and dashboard modules

--- a/crowd-voice-front-end-project/src/client/app/dashboard/dashboard.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/dashboard.component.html
@@ -2,5 +2,8 @@
 <sidebar-cmp></sidebar-cmp>
 <section class="main-container" [ngClass]="{sidebarPushRight: isActive}">	
 	<alert></alert>
+	<br/>
 	<router-outlet></router-outlet>
+	<br/>
+	<alert></alert>
 </section>
