--- a/crowd-voice-front-end-project/src/client/app/login/login.component.html
+++ b/crowd-voice-front-end-project/src/client/app/login/login.component.html
@@ -36,15 +36,18 @@
 					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i> Signing you in...
 				</span>
 				
-				<br/><br/><br/>
+				<br/><br/>
+				
+				<alert></alert>
+				
+				<br/>
 				
 				<a class="btn rounded-btn" routerLink="/signup"><i class="fa fa-user-plus"></i> Not a user? Go to register page </a>
 				
-				<br/><br/><br/>
+				<br/><br/>
 				
 				<a routerLink="/dashboard/home"><i class="fa fa-sign-in"></i> Continue as Guest </a>
 			</form>
-		
 		</div>	
 	</div>
 </div>
