--- a/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
+++ b/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
@@ -57,7 +57,11 @@
 					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i> Registering you to CrowdVoice...
 				</span>
 				
-				<br/><br/><br/>
+				<br/><br/>
+				
+				<alert></alert>
+				
+				<br/>
 				
 				<a type="submit" class="btn rounded-btn" routerLink="/login"><i class="fa fa-sign-in"></i> Go to login page </a>
 			
