--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
@@ -18,7 +18,7 @@
 		<div class="col-lg-12 jumbotron card card-block">
 			<h3><a [routerLink]="['/dashboard/projects/view', project.Id]">{{project.Title}}</a></h3>
 			<hr/>
-			<p>{{project.Description}}</p>
+			<p>{{project.Description | limitTo: 450}}</p>
 			<hr/>
 			<p><i class="fa fa-calendar"></i> Created on: {{project.CreatedDate | date:'medium'}}</p>
 			<p><i class="fa fa-calendar"></i> Updated on: {{project.UpdatedDate | date:'medium'}}</p>
