--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
@@ -1,62 +1,73 @@
 <div *ngIf="project" class="container-fluid">
 	<!-- Page Heading -->
-    <div class="row">
-        <div class="col-lg-12">
-            <h2 class="page-header">
-                Project Profile Page
-            </h2>
-            <ol class="breadcrumb">
-                <li>
-                    <i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home">Home</a>
-                </li>
-                <li class="active">
-                    <i class="fa fa-profile"></i> Project Profile Page
-                </li>
-            </ol>
-        </div>
-    </div>
+	<div class="row">
+		<div class="col-lg-12">
+			<h2 class="page-header">
+				Project Profile Page
+			</h2>
+			<ol class="breadcrumb">
+				<li>
+					<i class="fa fa-dashboard"></i> <a href="Javascript:void(0)" routerLink="/dashboard/home">Home</a>
+				</li>
+				<li class="active">
+					<i class="fa fa-profile"></i> Project Profile Page
+				</li>
+			</ol>
+		</div>
+	</div>
 
 	<div class="row" *ngIf="isRequestorProjectCreator">
-        <div class="col-lg-12">
-            <ol class="breadcrumb">
-                <li>
-                    <i class="fa fa-edit"></i> <a [routerLink]="['/dashboard/projects/edit', project.Id]">Edit Project</a>
-                </li>
+		<div class="col-lg-12">
+			<ol class="breadcrumb">
+				<li>
+					<i class="fa fa-edit"></i> <a [routerLink]="['/dashboard/projects/edit', project.Id]">Edit Project</a>
+				</li>
 				<li>
 					<a [routerLink]="['/dashboard/projects/', project.Id, 'updates', 'create']">Create Project Update</a>
 				</li>
-                <li>
-                    <a [routerLink]="['/dashboard/projects/', project.Id, 'fundingPackages', 'create']">Create Funding Package</a>
-                </li>
 				<li>
-                    <a [routerLink]="['/dashboard/projects/', project.Id, 'projectStatScreen']">Observe Project Stats</a>
-                </li>
-            </ol>
-        </div>
+					<a [routerLink]="['/dashboard/projects/', project.Id, 'fundingPackages', 'create']">Create Funding Package</a>
+				</li>
+				<li>
+					<a [routerLink]="['/dashboard/projects/', project.Id, 'projectStatScreen']">Observe Project Stats</a>
+				</li>
+			</ol>
+		</div>
 		<hr/>
-    </div>
-	
+	</div>
+
 	<div class="row" *ngIf="isRequestorLoggedIn">
 		<div class="col-lg-12">
-			<i class="fa fa-twitter"></i> 
+			<i class="fa fa-twitter"></i>
 			<a (click)="createExternalShare('TWI')" target="blank" href="https://twitter.com/share">
 				Share to Twitter
-			</a>
-			&nbsp;|&nbsp;
-			<i class="fa fa-facebook"></i> 
+			</a> &nbsp;|&nbsp;
+			<i class="fa fa-facebook"></i>
 			<a (click)="createExternalShare('FAC')" href="javascript:void(0)">
 				Share to Facebook
-			</a>
-			&nbsp;|&nbsp;
-			<i class="fa fa-comment"></i> 
+			</a> &nbsp;|&nbsp;
+			<i class="fa fa-comment"></i>
 			<a [routerLink]="['/dashboard/projects/', project.Id, 'comments', 'create']" href="javascript:void(0)">
 				Post a Comment
 			</a>
 		</div>
 	</div>
 	<br/>
-    <!-- /.row -->
+	<!-- /.row -->
+	<div style="width:100%;">
+		<div class="card" *ngFor="let item of attachments" style="width:300px;float:left;padding:10px;height:250px;">
+			<img class="card-img-top" *ngIf="item.FilePath != null" src="{{item.FilePath}}" alt="Card image cap" style="width:100%;height:calc(100% - 35px);">
+			<div *ngIf="item.HtmlCode != null">
+				<iframe style="width:100%;height:calc(100% - 35px);" [src]='item.url' frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div class="card-block">
+				<p class="card-title">{{item.Name}} </p>
+			</div>
+		</div>
+	</div>
+
 	<div class="col-lg-12 card card-block" *ngIf="project">
+
 		<h3>{{project.Title}}</h3>
 		<hr/>
 		<p>{{project.Description}}</p>
@@ -68,7 +79,7 @@
 		<p><i class="fa fa-user"></i> Project Owner: <a [routerLink]="['/dashboard/users/view', project.OwnerId]">{{project.OwnerName}}</a></p>
 		<p><i class="fa fa-list"></i> Project Category: {{project.ProjectCategoryDesc}}</p>
 		<p>
-			<i class="fa fa-code-fork"></i> Status: 
+			<i class="fa fa-code-fork"></i> Status:
 			<span *ngIf="project.Status == 'CRE'">
 				Under Funding
 			</span>
@@ -85,16 +96,16 @@
 				<p>Money Pledged / Funding Goal (in <i class="fa fa-euro"></i>): {{projectStat.MoneyPledged}} / {{project.FundingGoal}}</p> 
 				<p>{{completedPercentage}}% complete</p>
 				<p>Backed {{projectStat.BackersNo}} time(s).</p>
-			</strong>	
+			</strong>
 		</div>
 	</div>
-	
+
 	<div class="row" *ngIf="(projectUpdates && projectUpdates.length > 0) || (fundingPackages && fundingPackages.length > 0) || (projectComments && projectComments.length > 0) ">
 		<div class="col-lg-12">
 			<div class="card card-block" (click)="$event.preventDefault()">
 				<tabset>
 					<br/>
-					
+
 					<tab heading="Funding Packages" *ngIf="fundingPackages && fundingPackages.length > 0">
 						<div *ngFor="let fundingPackage of fundingPackages">
 							<div class="jumbotron">
@@ -104,13 +115,13 @@
 								<p *ngIf="fundingPackage.PledgeAmount"><i class="fa fa-money"></i> Pledge Amount: {{fundingPackage.PledgeAmount}} <i class="fa fa-euro"></i></p>
 								<p><i class="fa fa-clock-o"></i> {{fundingPackage.WhenDateTime | date:'medium'}}</p>
 								<!--<p *ngIf="fundingPackage.PledgeAmount"><i class="fa fa-clock-o"></i> Estimated Delivery Date: {{fundingPackage.EstimatedDeliveryDate | date:'medium'}}</p>-->
-								<a *ngIf="!fundingPackage.PledgeAmount && project.Status != 'FAI'"href="javascript:void(0)" [routerLink]="['/dashboard/projects/', project.Id, 'fundingPackages', fundingPackage.Id, 'donate']"><i class="fa fa-credit-card"></i> Donate</a>
+								<a *ngIf="!fundingPackage.PledgeAmount && project.Status != 'FAI'" href="javascript:void(0)" [routerLink]="['/dashboard/projects/', project.Id, 'fundingPackages', fundingPackage.Id, 'donate']"><i class="fa fa-credit-card"></i> Donate</a>
 								<a *ngIf="fundingPackage.PledgeAmount && project.Status != 'FAI'" href="javascript:void(0)" [routerLink]="['/dashboard/projects/', project.Id, 'fundingPackages', fundingPackage.Id, 'pay']"><i class="fa fa-credit-card"></i> Choose this Funding Package</a>
 							</div>
 							<hr/>
 						</div>
 					</tab>
-					
+
 					<tab heading="Project Updates" *ngIf="projectUpdates && projectUpdates.length > 0">
 						<div *ngFor="let update of projectUpdates">
 							<div class="jumbotron">
@@ -122,7 +133,7 @@
 							<hr/>
 						</div>
 					</tab>
-					
+
 					<tab heading="Project Comments" *ngIf="projectComments && projectComments.length > 0">
 						<div *ngFor="let comment of projectComments">
 							<div class="jumbotron">
@@ -137,7 +148,7 @@
 							<hr/>
 						</div>
 					</tab>
-					
+
 				</tabset>
 			</div>
 		</div>
