--- a/crowd-voice-front-end-project/src/client/app/login/login.component.html
+++ b/crowd-voice-front-end-project/src/client/app/login/login.component.html
@@ -42,7 +42,7 @@
 				
 				<br/>
 				
-				<a class="btn rounded-btn" routerLink="/signup"><i class="fa fa-user-plus"></i> Not a user? Go to register page </a>
+				<a class="btn btn-primary" routerLink="/signup"><i class="fa fa-user-plus"></i> Not a user? Go to register page </a>
 				
 				<br/><br/>
 				
