--- a/crowd-voice-front-end-project/src/client/app/dashboard/user/userSearch.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/user/userSearch.component.html
@@ -32,16 +32,16 @@
 		</div>
 	</div>
 	<span *ngIf="users && users.length > 0">
-		<div *ngFor="let user of users">
-		<div class="col-lg-12 jumbotron card card-block">
+		<!--<div *ngFor="let user of users">-->
+		<div class="col-lg-3 jumbotron card card-block user-list" *ngFor="let user of users">
 			<h3><a [routerLink]="['/dashboard/users/view', user.Id]">{{user.Name}}</a></h3>
 			<hr/>
 			
-			<img [src]="user.AvatarImage" alt="AvatarImage" style="max-width: 150px; max-height: 150px; display: block;">
+			<img [src]="user.AvatarImage" alt="AvatarImage" style="max-width: 150px; height: 150px; display: block;">
 			<br/>
 			<p><i class="fa fa-registered"></i> Registered on: {{user.CreatedDateTime | date:'medium'}}</p>
-		</div>
-		<hr/>
+		<!--</div>-->
+		<!--<hr/>-->
 	</div>
 	</span>
 	<span *ngIf="users && users.length == 0">
