--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
@@ -14,58 +14,63 @@
 			</ol>
 		</div>
 	</div>
-	<div *ngIf="fundingPackage">
-		<div class="col-lg-12 jumbotron card card-block">
-			<h3>Project Title: {{fundingPackage.ProjectTitle}}</h3>
-			
-			<br/>
-			
-			<h4>Project Description: {{fundingPackage.ProjectDescription}}</h4>
-			
-			<hr/>
-			
-			<strong>Funding Package Chosen: {{fundingPackage.Title}}</strong>
-			
-			<hr/>
-			
-			<strong *ngIf="!isDonationPackage">Funding Package Reward: {{fundingPackage.Description}}<br/></strong>
-			
-			<fieldset *ngIf="isDonationPackage" class="form-group" [ngClass]="{ 'has-error': !amountbox.valid }">
-			
-				<label for="amountbox">Amount to donate in <i class="fa fa-euro"></i> (*)</label>
-			
-				<input 
-					(keypress)="_keyPress($event)"
-					type="text"
-					class="form-control input-underline input-lg" 
-					name="amountbox" id="amountbox" placeholder="Enter Amount to donate..."
-					#amountbox [(ngModel)]="donationAmount" required>
+	<span *ngIf="!loading">
+		<div *ngIf="fundingPackage">
+			<div class="col-lg-12 jumbotron card card-block">
+				<h3>Project Title: {{fundingPackage.ProjectTitle}}</h3>
 				
-			</fieldset>
-			<hr/>
-			
-			<span *ngIf="isDonationPackage && donationAmount">
-				You are going to pay {{donationAmount}} <i class="fa fa-euro"></i>
-				<br/><br/>
+				<br/>
 				
-				<a class="initVivaButtonHref" href="javascript: void(0);" (click)="initVivaButton(true)">Click me if this is OK to proceed to payment options!</a>
-				<br/><br/>
-				<span id="viva-wallet-button"></span>
+				<h4>Project Description: {{fundingPackage.ProjectDescription}}</h4>
 				
-			</span>
-			
-			<span *ngIf="!isDonationPackage">
-				You are going to pay {{fundingPackage.PledgeAmount}} <i class="fa fa-euro"></i>
-				<br/><br/>
+				<hr/>
 				
-				<a class="initVivaButtonHref" href="javascript: void(0);" (click)="initVivaButton(false)">Click me if this is OK to proceed to payment options!</a>
-				<br/><br/>
-				<span id="viva-wallet-button"></span>
+				<strong>Funding Package Chosen: {{fundingPackage.Title}}</strong>
 				
-			</span>
-			
+				<hr/>
+				
+				<strong *ngIf="!isDonationPackage">Funding Package Reward: {{fundingPackage.Description}}<br/></strong>
+				
+				<fieldset *ngIf="isDonationPackage" class="form-group" [ngClass]="{ 'has-error': !amountbox.valid }">
+				
+					<label for="amountbox">Amount to donate in <i class="fa fa-euro"></i> (*)</label>
+				
+					<input 
+						(keypress)="_keyPress($event)"
+						type="text"
+						class="form-control input-underline input-lg" 
+						name="amountbox" id="amountbox" placeholder="Enter Amount to donate..."
+						#amountbox [(ngModel)]="donationAmount" required>
+					
+				</fieldset>
+				<hr/>
+				
+				<span *ngIf="isDonationPackage && donationAmount">
+					You are going to pay {{donationAmount}} <i class="fa fa-euro"></i>
+					<br/><br/>
+					
+					<a class="initVivaButtonHref" href="javascript: void(0);" (click)="initVivaButton(true)">Click me if this is OK to proceed to payment options!</a>
+					<br/><br/>
+					<span id="viva-wallet-button"></span>
+					
+				</span>
+				
+				<span *ngIf="!isDonationPackage">
+					You are going to pay {{fundingPackage.PledgeAmount}} <i class="fa fa-euro"></i>
+					<br/><br/>
+					
+					<a class="initVivaButtonHref" href="javascript: void(0);" (click)="initVivaButton(false)">Click me if this is OK to proceed to payment options!</a>
+					<br/><br/>
+					<span id="viva-wallet-button"></span>
+					
+				</span>
+				
+			</div>
 		</div>
-	</div>
+	</span>
+	<span *ngIf="loading">
+		<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>  Please wait while completing your payment request...
+	</span>
 	<hr/>
 	<a href="javascript:void(0)" [routerLink]="['/dashboard/projects/view', fundingPackage.ProjectId]">Back to Project Profile Page</a>
 </div>
