--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -114,14 +114,12 @@
         </div>
     </div>
     <!--///////////////////////////-->
-    <div *ngIf="!currentUser">
-        <div class="col-lg-12">
-            <span class="col-lg-7">
-                <lastUsersTimeline-cmp></lastUsersTimeline-cmp>
-            </span>
-            <span class="col-lg-5">
-                <lastBacks-cmp></lastBacks-cmp>
-            </span>
-        </div>
+    <div class="row" *ngIf="!currentUser">
+        <span class="col-lg-7">
+            <lastUsersTimeline-cmp></lastUsersTimeline-cmp>
+        </span>
+        <span class="col-lg-5">
+            <lastBacks-cmp></lastBacks-cmp>
+        </span>
     </div>
 </div>
