--- a/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
+++ b/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
@@ -63,7 +63,7 @@
 				
 				<br/>
 				
-				<a type="submit" class="btn rounded-btn" routerLink="/login"><i class="fa fa-sign-in"></i> Go to login page </a>
+				<a type="submit" class="btn btn-primary" routerLink="/login"><i class="fa fa-sign-in"></i> Go to login page </a>
 			
 			</form>
 			
