--- a/crowd-voice-front-end-project/src/client/style.css
+++ b/crowd-voice-front-end-project/src/client/style.css
@@ -72,20 +72,20 @@ input#username:focus{
     border: 1px solid lightpink;
 }
 
-input#username::-webkit-input-placeholder {
-   color: red;
+.login-page #username, .login-page #password::-webkit-input-placeholder {
+   color:#000 !important;
 }
 
-input#username:-moz-placeholder { /* Firefox 18- */
-   color: red;  
+.login-page #username, .login-page #password:-moz-placeholder { /* Firefox 18- */
+   color:#000 !important;  
 }
 
-.login-page input::-moz-placeholder {  /* Firefox 19+ */
-   color: red;  
+.login-page #username, .login-page #password::-moz-placeholder {  /* Firefox 19+ */
+   color:#000 !important;  
 }
 
-.login-page input:-ms-input-placeholder {  
-   color: red;  
+.login-page #username, .login-page #password:-ms-input-placeholder {  
+   color:#000 !important;  
 }
 /* Top Nav */
 .topnav{   
@@ -94,16 +94,23 @@ input#username:-moz-placeholder { /* Firefox 18- */
     box-shadow: 0px 4px 10px 0 rgba(22,22,22,0.08);
     z-index: 99 !important;
     height: 50px;
-    background: #fff !important;
+    background: #2E3345 !important;
     margin:0px;
     padding:0px;
     position: relative;
 }
 
-.navbar-dark .navbar-brand,.navbar-dark .navbar-nav .nav-link{color:#000 !important;}
+.navbar-dark .navbar-brand,.navbar-dark .navbar-nav .nav-link{color:#fff !important;}
+.navbar-dark .navbar-nav .nav-link {
+    align-self: center;
+    white-space: nowrap;
+    margin: 0px 20px;
+}
 .navbar-dark .navbar-brand .fa{
     color: #0275d8;
 }
+
+.navbar-nav .nav-item + .nav-item{margin-left:0px !important;}
 
 .topnav a{
     align-self: center;
@@ -111,14 +118,25 @@ input#username:-moz-placeholder { /* Firefox 18- */
     margin:0px 20px;
 }
 
+.navbar-brand{float:none !important;text-align: center;}
+.navbar-brand > img{display:inline-block !important;}
+
 a.navbar-brand:hover,a.nav-link:hover{
     color: #0275d8 !important;
 }
 .site-nav__left, .site-nav__middle, .site-nav__right{display:flex;}
 
+.site-nav__left a:hover, .site-nav__middle a:hover, .site-nav__right a:hover{
+    color:#fff !important;
+}
+
 .site-nav__left {
     flex: 2;
     order: 2;
+}
+
+.site-nav__left a{
+    color:#fff;
 }
 
 .site-nav__middle {
@@ -127,7 +145,10 @@ a.navbar-brand:hover,a.nav-link:hover{
     order: 2;
 }
 
-.navbar-brand{margin-left:1rem;}
+.site-nav__middle a span{
+    vertical-align:bottom;
+}
+/* .navbar-brand{margin-left:1rem;} */
 
 .site-nav__right {
     flex: 2;
@@ -135,13 +156,27 @@ a.navbar-brand:hover,a.nav-link:hover{
      justify-content: flex-end;
 }
 
+.dropdown-item{
+    margin:0px !important;
+}
+
 /* Main Container Section */
 .main-container{
-    padding-bottom:100px !important;
+    padding:20px 10px 100px 10px !important;
     border-left: 1px solid lightblue;
 }
 
 .jumbotron{padding:2rem !important;}
+
+.card{
+    margin-bottom:2rem !important;
+}
+
+.card-header{
+    background-color: #2E3345 !important;
+    color:#fff;
+}
+
 .card-block{font-size: 14px;}
 
 /* Left Sidebar */
@@ -167,9 +202,9 @@ a.navbar-brand:hover,a.nav-link:hover{
 }
 
 /* Page Profile View */
-.breadcrumb{
+/* .breadcrumb{
     margin-right: 0.75rem;
-}
+}*/
 
 .bio{text-align:center;}
 
@@ -184,7 +219,18 @@ a.navbar-brand:hover,a.nav-link:hover{
     column-gap: 40px;
 }
 
-.list-project-desc{padding-right:20px;}
+.list-project-desc{
+    padding-right:20px;
+    display: inline-block;
+    margin-bottom: 2rem;
+}
+
+.list-project-desc img{
+    max-width:250px;
+    display:inline-block;
+    margin-left:-15px;
+    margin-right:25px;
+}
 
 .multi-columns p{display: inline-block;}
 
@@ -201,20 +247,26 @@ a.navbar-brand:hover,a.nav-link:hover{
 box-shadow:         4px 4px 10px 0px rgba(50, 50, 50, 0.5);
 }
 
-.user-list h3{
+.user-list h3, h4.timeline-title{
      width: 100%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align:center;
+  margin-bottom:20px;
 }
+
 .user-list a{
     margin-bottom:20px;
 }
 
 .user-list img{
-    margin-bottom:20px;
+    margin:0px auto 20px auto;
 }
 
+.user-list p{
+    text-align:center;
+}
 /* Footer Section */
 .main-footer{    margin: 50px 0 0 0px;
     padding: 0px;
@@ -264,5 +316,31 @@ box-shadow:         4px 4px 10px 0px rgba(50, 50, 50, 0.5);
     }
     .site-nav__right {
     order: 3;
+    }
+}
+
+@media (max-width: 639px){
+    .list-project-desc img{
+        display:block;
+        margin:0px auto 2rem auto;
+        float:none;
+    }
+
+    .main-footer p {
+        margin: 0px 0px 20px 0px;
+        color: #fff;
+        text-align: center;
+    }
+
+    .main-footer .right{
+         float: none;
+        margin: 0 auto;
+        display: table;
+    }
+
+    .main-footer .right .mr5{
+        width: initial;
+        display: table-header-group;
+        text-align: center;
     }
 }
