UI Evolution Vol 2

--- a/crowd-voice-front-end-project/src/client/app/dashboard/dashboard.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/dashboard.component.html
@@ -1,34 +1,33 @@
 <top-nav></top-nav>
 <sidebar-cmp></sidebar-cmp>
-<section class="main-container" [ngClass]="{sidebarPushRight: isActive}">	
+<section class="main-container" [ngClass]="{sidebarPushRight: isActive}">
 	<alert></alert>
 	<router-outlet></router-outlet>
 </section>
-<section class="main-footer"  [ngClass]="{sidebarPushRight: isActive}">
-<footer>
-	<div class="row">
-	<div class="col-lg-6">
-<p class="copyright">© 2016 <a class="footer-logo" href="#"><span>CrowdVoice</span></a>
-- All rights Reserved</p>
-</div>
-<div class="col-lg-6">
-	<div class="right">
-<ul class="mr5">
-<li class="inline-block py2">
-<a href="https://twitter.com/kickstarter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-<li class="inline-block py2">
-<a href="https://www.facebook.com/Kickstarter" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-<li class="inline-block py2">
-<a href="http://kickstarter.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
-<li class="inline-block py2">
-<a href="http://instagram.com/kickstarter" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-<li class="inline-block py2">
-<a href="https://www.pinterest.com/kickstarter/" target="_blank"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-<li class="inline-block py2">
-<a href="https://www.youtube.com/user/kickstarter" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-</ul>
-</div>
-</div>
-</div>
-</footer>
+<section class="main-footer" [ngClass]="{sidebarPushRight: isActive}">
+	<footer>
+		<div class="row">
+			<div class="col-lg-6">
+				<p class="copyright">© 2016 <a class="footer-logo" href="#"><span>CrowdVoice</span></a> - All rights Reserved</p>
+			</div>
+			<div class="col-lg-6">
+				<div class="right">
+					<ul class="mr5">
+						<li class="inline-block py2">
+							<a href="https://twitter.com/kickstarter" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+						<li class="inline-block py2">
+							<a href="https://www.facebook.com/Kickstarter" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+						<li class="inline-block py2">
+							<a href="http://kickstarter.tumblr.com" target="_blank"><i class="fa fa-tumblr" aria-hidden="true"></i></a></li>
+						<li class="inline-block py2">
+							<a href="http://instagram.com/kickstarter" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+						<li class="inline-block py2">
+							<a href="https://www.pinterest.com/kickstarter/" target="_blank"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+						<li class="inline-block py2">
+							<a href="https://www.youtube.com/user/kickstarter" target="_blank"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 </section>
