--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
@@ -6,7 +6,7 @@
 			</h2>
 			<ol class="breadcrumb">
 				<li>
-					<i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home">Home</a>
+					<i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home"><i class="fa fa-fw fa-home" aria-hidden="true"></i> Home</a>
 				</li>
 				<li class="active">
 					<i class="fa fa-profile"></i> {{title}}
@@ -14,8 +14,9 @@
 			</ol>
 		</div>
 	</div>
+	<div class="col-lg-12">
 	<div class="row jumbotron card card-block" *ngFor="let project of projects">
-	<div class="row">
+		<div class="row">
 			
 		<h3><a [routerLink]="['/dashboard/projects/view', project.Id]">{{project.Title}}</a></h3>
 		<hr/>
@@ -43,6 +44,7 @@
 			</span>
 		</p>
 		</div>
+	</div>
 </div>
 	<span *ngIf="projects && projects.length == 0">
 		<div class="alert alert-info">
