--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
@@ -6,7 +6,7 @@
 			</h2>
 			<ol class="breadcrumb">
 				<li>
-					<i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home"><i class="fa fa-fw fa-home" aria-hidden="true"></i> Home</a>
+					<a href="Javascript:void(0)" routerLink="/dashboard/home"><i class="fa fa-fw fa-home" aria-hidden="true"></i> Home</a>
 				</li>
 				<li class="active">
 					<i class="fa fa-profile"></i> {{title}}
@@ -21,7 +21,7 @@
 		<h3><a [routerLink]="['/dashboard/projects/view', project.Id]">{{project.Title}}</a></h3>
 		<hr/>
 		<div class="col-lg-6 list-project-desc">
-		<img  *ngIf="project.MainPhoto" src="{{project.MainPhoto}}" alt="Card image cap">
+		<img  *ngIf="project.MainPhoto" src="{{project.MainPhoto}}" alt="Card image cap" />
 		<p>{{project.Description | limitTo: 450}}</p>
 		</div>
 		<div class="col-lg-6 multi-columns">
