--- a/crowd-voice-front-end-project/src/client/app/dashboard/user/userList.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/user/userList.component.html
@@ -6,7 +6,7 @@
 			</h2>
 			<ol class="breadcrumb">
 				<li>
-					<i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home">Home</a>
+					<a href="Javascript:void(0)" routerLink="/dashboard/home"><i class="fa fa-fw fa-home" aria-hidden="true"></i> Home</a>
 				</li>
 				<li class="active">
 					<i class="fa fa-profile"></i> All Users
